--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/Adavidson87/movie_api#readme",
   "dependencies": {
+    "@types/express": "^4.17.12",
+    "@types/method-override": "^0.0.31",
+    "@types/morgan": "^1.9.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0"
   }
 }
