--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   }
