--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/express": "^4.17.12",
     "@types/method-override": "^0.0.31",
     "@types/morgan": "^1.9.2",
-    "bcrypt": "^5.0.1",
+    "bycrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
